--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -144,15 +144,17 @@ body{
 }
 
 .logout{
-    color: rgb(3, 53, 63);
-    margin-top: 20px;
+    color: rgb(9, 98, 116);
+    margin-top: 30px;
+    margin-bottom: 0;
     font-size: 14px;
+    font-weight: 600;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 2px;
-    background-color: rgb(71, 184, 237);
+    background-color: rgb(193, 228, 245);
 }
 
 .rigth-navbar{
@@ -188,7 +190,7 @@ body{
   
 
 /* Responsive styles for screens 768px and below */
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
     .section {
         flex-direction: column;
     }
@@ -199,5 +201,17 @@ body{
 
     .section1 {
         width: 100%;
+        margin-bottom: 40px;
     }
-} */
+    .rigth-navbar{
+        display: none;
+    }
+    body{
+        position: relative;
+    }
+    .logout{
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+    }
+}
