--- a/src/components/dashbord/dashboard.css
+++ b/src/components/dashbord/dashboard.css
@@ -52,3 +52,18 @@
   display: flex;
   flex-direction: column;
 }
+
+
+/* Responsive styles for screens 768px and below  */
+@media (max-width: 768px) {
+
+    .card2 {
+        display: flex;
+        flex-direction: column;
+    }
+    .card2-feautures{
+        box-shadow: 0 0 10px 5px rgba(198, 218, 218, 0.1);
+        padding: auto;
+    }
+    
+}
