--- a/src/components/dashbord/dashboard.css
+++ b/src/components/dashbord/dashboard.css
@@ -56,14 +56,27 @@
 
 /* Responsive styles for screens 768px and below  */
 @media (max-width: 768px) {
-
-    .card2 {
+    .dashboard-section1,.dashboard-section2{
         display: flex;
         flex-direction: column;
     }
-    .card2-feautures{
-        box-shadow: 0 0 10px 5px rgba(198, 218, 218, 0.1);
-        padding: auto;
+    .card1 {
+      width: 80%;
+      padding: 10px;
+      display: flex;
+      flex-direction: row;
     }
+
+    .card2 {
+      /* display: flex;
+      flex-direction: co; */
+      width: 80%;
+      padding: 10px;
+  }
+  .card2-feautures{
+      box-shadow: 0 0 10px 5px rgba(198, 218, 218, 0.1);
+      padding: auto;
+  }
+
     
 }
